--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "start": "serve -s build",
+  "build": "react-scripts build",
+  "dev": "react-scripts start",
+  "lint": "eslint .",
+  "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
