Add react-scripts dependency

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "start": "serve -s build",
-  "build": "react-scripts build",
-  "dev": "react-scripts start",
-  "lint": "eslint .",
-  "preview": "vite preview"
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "dev": "react-scripts start",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -17,7 +17,8 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
